--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -1,1 +1,72 @@
-<p>form works!</p>
+<div class="form-body masthead">
+    <div class="row">
+        <div class="form-holder">
+            <div class="form-content">
+                <div class="form-items">
+                    <h3>Formulario de pedido</h3>
+                    <form class="requires-validation"  (ngSubmit)="createEditProfile($event)" [formGroup]="forma">
+
+                        <div class="col-md-12">
+                           <input class="form-control" type="text" formControlName="name" placeholder="Full Name" required>
+                           <div class="valid-feedback">Username field is valid!</div>
+                           <div class="invalid-feedback">Username field cannot be blank!</div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <input class="form-control" type="email" formControlName="email" placeholder="E-mail Address" required>
+                             <div class="valid-feedback">Email field is valid!</div>
+                             <div class="invalid-feedback">Email field cannot be blank!</div>
+                        </div>
+
+                       <div class="col-md-12">
+                            <select class="form-select mt-3" required>
+                                  <option selected disabled value="">Position</option>
+                                  <option value="jweb">Junior Web Developer</option>
+                                  <option value="sweb">Senior Web Developer</option>
+                                  <option value="pmanager">Project Manager</option>
+                           </select>
+                            <div class="valid-feedback">You selected a position!</div>
+                            <div class="invalid-feedback">Please select a position!</div>
+                       </div>
+
+
+                       <div class="col-md-12">
+                          <input class="form-control" type="text" formControlName="position" placeholder="Password" required>
+                           <div class="valid-feedback">Password field is valid!</div>
+                           <div class="invalid-feedback">Password field cannot be blank!</div>
+                       </div>
+
+
+                       <div class="col-md-12 mt-3">
+                        <label class="mb-3 mr-1" for="gender">Genero: </label>
+
+                        <input type="radio" class="btn-check" name="gender" id="male" autocomplete="off" required>
+                        <label class="btn btn-sm btn-outline-secondary" for="male">Masculino</label>
+
+                        <input type="radio" class="btn-check" name="gender" id="female" autocomplete="off" required>
+                        <label class="btn btn-sm btn-outline-secondary" for="female">Femenino</label>
+
+                        <input type="radio" class="btn-check" name="gender" id="secret" autocomplete="off" required>
+                        <label class="btn btn-sm btn-outline-secondary" for="secret">Secret</label>
+                           <div class="valid-feedback mv-up">You selected a gender!</div>
+                            <div class="invalid-feedback mv-up">Please select a gender!</div>
+                        </div>
+
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                      <label class="form-check-label">Confirmo que todos los datos son correctos</label>
+                     <div class="invalid-feedback">¡Confirme que los datos ingresados ​​sean correctos!</div>
+                    </div>
+              
+
+                        <div class="form-button mt-3 clearfix ">
+                            <button id="submit" type="submit" class="btn btn-outline-primary float-left">Pagar con placetopay</button>
+                            <a  routerLink="['/']" class="btn btn-outline-success float-right">Home</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <app-footer></app-footer>
+        </div>
+    </div>
+</div>
