--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -15,22 +15,7 @@
             <a class="btn btn-primary btn-xl" [routerLink]="['/form']">Ir al formulario</a>
         </div>
     </header>   
-    <footer class="footer text-center">
-        <div class="container px-4 px-lg-5">
-            <!-- <ul class="list-inline mb-5">
-                <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-facebook"></i></a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white mr-3" href="#!"><i class="icon-social-twitter"></i></a>
-                </li>
-                <li class="list-inline-item">
-                    <a class="social-link rounded-circle text-white" href="#!"><i class="icon-social-github"></i></a>
-                </li>
-            </ul> -->
-            <p class="text-muted small mb-0">Copyright &copy; Prueba de ingreso placetopay</p>
-        </div>
-    </footer>
+    <app-footer></app-footer>
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
    
