--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,10 @@
         <ul class="sidebar-nav">
             <li class="sidebar-brand"><a href="#page-top">PlaceToPay Evertec</a></li>
             <li class="sidebar-nav-item"><a href="javascript:void(0);" [routerLink]="['/']">Home</a></li>           
-            <li class="sidebar-nav-item"><a href="javascript:void(0);" [routerLink]="['/form']">Form</a></li>           
+            <li class="sidebar-nav-item"><a href="javascript:void(0);" [routerLink]="['/form']">Form</a></li>   
+            <li class="sidebar-nav-item"><a href="javascript:void(0);" (click)="onLogin.open()">Login</a></li>   
+            <li class="sidebar-nav-item"><a href="javascript:void(0);" (click)="onRegister.open()">Register</a></li>   
+
         </ul>
     </nav>
     <!-- Header-->
@@ -19,4 +22,5 @@
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
    
-    
+    <app-base-modal #onLogin [target]="'login'"></app-base-modal>
+    <app-base-modal #onRegister [target]="'register'"></app-base-modal>
