--- a/src/app/components/modals/sign-up/create-user.component.html
+++ b/src/app/components/modals/sign-up/create-user.component.html
@@ -1,4 +1,3 @@
-
 <div class="container mt-3 mb-3 modal-content rounded-0" style="width: 390px; height: auto">
     <!-- Modal Header -->
     <div class="modal-header">
@@ -28,8 +27,8 @@
         formControlName="email"
         #email
       />
-    <app-validation-errors [formulario]="forma" formControlLabel="email" [minlenght]=3 [maxlenght]=100>
-      </app-validation-errors> 
+      <app-validations-errors [formulario]="forma" formControlLabel="email" [minlenght]=3 [maxlenght]=100>
+      </app-validations-errors>
      </div>
      <div class="mb-2 text-right" style="height: 50px">
         <input
@@ -40,8 +39,8 @@
           formControlName="usuario"
           #username
         />
-         <app-validation-errors [formulario]="forma" formControlLabel="usuario" [minlenght]=3 [maxlenght]=20>
-        </app-validation-errors>       
+        <app-validations-errors [formulario]="forma" formControlLabel="usuario" [minlenght]=3 [maxlenght]=20>
+        </app-validations-errors>       
       </div>
       <div class="mb-2 text-right" style="height: 50px">
         <input
@@ -51,8 +50,8 @@
           formControlName="nombre"
           #nombre
         />
-       <app-validation-errors [formulario]="forma" formControlLabel="nombre" [minlenght]=3 [maxlenght]=100>
-        </app-validation-errors> 
+        <app-validations-errors [formulario]="forma" formControlLabel="nombre" [minlenght]=3 [maxlenght]=100>
+        </app-validations-errors>
        </div>
        <div class="mb-2 text-right" style="height: 50px">
         <input
@@ -62,33 +61,17 @@
           formControlName="apellido"
           #apellido
         />
-        <app-validation-errors [formulario]="forma" formControlLabel="apellido" [minlenght]=3 [maxlenght]=100>
-        </app-validation-errors> 
+        <app-validations-errors [formulario]="forma" formControlLabel="apellido" [minlenght]=3 [maxlenght]=100>
+        </app-validations-errors>
        </div>
-
-
        <div class="mb-2 text-right" style="height: 50px">
-         <select formControlName="typeDocument" class="form-control exo text-field shadow-none">
-          <option>Seleccione el tipo de documento</option>
-          <option *ngFor="let document of typeDocument">{{document}}</option>
-        </select> 
-        <app-validation-errors [formulario]="forma" formControlLabel="typeDocument">
-        </app-validation-errors> 
-        </div>
-
-
-       <div class="mb-2 text-right" style="height: 50px">
-
-        <input
-        type="text"
-        class="form-control exo text-field shadow-none"
-        placeholder="Documento de identidad"
-        formControlName="document"
-        #document
-      />
-
-        <app-validation-errors [formulario]="forma" formControlLabel="document">
-        </app-validation-errors> 
+        <select formControlName="status"
+        class="form-control exo text-field shadow-none">
+          <option>Seleccione el Estado</option>
+          <option *ngFor="let statu of status">{{statu}}</option>
+        </select>
+        <app-validations-errors [formulario]="forma" formControlLabel="status">
+        </app-validations-errors>
        </div>
   
       <button
