creando componente de productos

--- a/src/app/components/modals/sign-in/sign-in.component.html
+++ b/src/app/components/modals/sign-in/sign-in.component.html
@@ -29,8 +29,8 @@
           formControlName="username"
           #username
         />
-        <!-- <app-validation-errors [formulario]="forma" formControlLabel="username" [minlenght]=3 [maxlenght]=20>
-        </app-validation-errors>     -->   
+        <app-validation-errors [formulario]="forma" formControlLabel="username" [minlenght]=3 [maxlenght]=20>
+        </app-validation-errors>     
       </div>
       <div class="mb-2 text-right" style="height: 50px">
         <input
@@ -40,8 +40,8 @@
           formControlName="password"
           #nombre
         />
-        <!-- <app-validation-errors [formulario]="forma" formControlLabel="password" [minlenght]=3 [maxlenght]=100>
-        </app-validation-errors> -->
+        <app-validation-errors [formulario]="forma" formControlLabel="password" [minlenght]=3 [maxlenght]=100>
+        </app-validation-errors>
        </div>
        
       <button
@@ -57,4 +57,5 @@
       </button>
     </form>
   </div>
+
 
