--- a/src/app/components/card-products/card-products.component.html
+++ b/src/app/components/card-products/card-products.component.html
@@ -17,6 +17,8 @@
     <p class="card-text">
       <small class="text-muted"></small>
     </p>
-    <a class="btn btn-outline-primary" [routerLink]="['/form']">Comprar</a>
+    <a class="btn btn-outline-primary" (click)="onBuy.open()">Comprar</a>
   </div>
 </div>
+<app-base-modal #onBuy [target]="'buy'"></app-base-modal>
+
