modal de confirm terminada

--- a/src/app/shared/button-close/button-close.component.html
+++ b/src/app/shared/button-close/button-close.component.html
@@ -5,6 +5,6 @@
     <img
       class="img-centered"
       style="height: 24px; width: 24px"
-      src="../../../assets/close.svg"
+      src="../assets/img/close.svg"
     />
   </button>
