--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,28 @@
 <!-- Navigation-->
-    <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
+    <a class="menu-toggle rounded"><i class="fas fa-bars"></i></a>
     <nav id="sidebar-wrapper">
         <ul class="sidebar-nav">
-            <li class="sidebar-brand"><a href="#page-top">PlaceToPay Evertec</a></li>
-            <li class="sidebar-nav-item"><a href="javascript:void(0);" [routerLink]="['/']">Home</a></li>           
-            <li class="sidebar-nav-item"><a href="#product" >Productos</a></li>   
-            <li class="sidebar-nav-item"><a href="javascript:void(0);" (click)="onLogin.open()">Login</a></li>   
-            <li class="sidebar-nav-item"><a href="javascript:void(0);" (click)="onRegister.open()">Register</a></li>   
+            <li class="sidebar-brand">
+                <a href="#page-top">PlaceToPay Evertec</a>
+            </li>
+            <li class="sidebar-nav-item">
+                <a href="javascript:void(0);" [routerLink]="['/']">Home &nbsp;&nbsp;&nbsp;<i class="fas fa-home"></i></a>
+            </li>           
+            <li class="sidebar-nav-item">
+                <a href="#product" >Productos &nbsp;&nbsp;&nbsp;<i class="fas fa-cash-register"></i></a>
+            </li>   
+            <li class="sidebar-nav-item">
+                <a href="javascript:void(0);" (click)="onLogin.open()" *ngIf="!isAuth">Login &nbsp;&nbsp;&nbsp;<i class="fas fa-sign-in-alt"></i></a> 
+            </li>   
+            <li class="sidebar-nav-item">
+                <a href="javascript:void(0);" (click)="onRegister.open()" *ngIf="!isAuth">Register &nbsp;&nbsp;&nbsp;<i class="fas fa-user-plus"></i></a>
+            </li>   
+            <li class="sidebar-nav-item">
+                <a href="javascript:void(0);" [routerLink]="['/orders']" *ngIf="isAuth" >Mis Ordenes &nbsp;&nbsp;&nbsp;<i class="fab fa-first-order"></i></a>
+            </li>   
+            <li class="sidebar-nav-item">
+                <a href="javascript:void(0);" (click)="logOut()" *ngIf="isAuth" >Salir &nbsp;&nbsp;&nbsp;<i class="fas fa-sign-out-alt"></i></a> 
+            </li>   
 
         </ul>
     </nav>
@@ -41,6 +57,7 @@
     <app-footer></app-footer>
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
-   
+    
     <app-base-modal #onLogin [target]="'login'"></app-base-modal>
     <app-base-modal #onRegister [target]="'register'"></app-base-modal>
+    
