--- a/src/app/components/modals/form/form.component.html
+++ b/src/app/components/modals/form/form.component.html
@@ -10,7 +10,7 @@
       (cerrarModal)="cerrar($event)"
     ></app-button-close>
   </div>
-  <div class="form-body masthead">
+  <div class="form-body">
     <div class="row">
       <div class="form-holder">
         <div class="form-content">
