--- a/src/app/components/modals/sign-in/sign-in.component.html
+++ b/src/app/components/modals/sign-in/sign-in.component.html
@@ -17,16 +17,12 @@
     >
     
     <div class="mb-2 text-right" style="height: 50px">
-      <input
-  type="hidden"
-  formControlName="id"
-  />
-        <input
+       <input
           type="text"
           class="form-control exo text-field shadow-none"
           style="z-index: 50"
-          placeholder="Username"
-          formControlName="username"
+          placeholder="Email"
+          formControlName="email"
           #username
         />
         <app-validation-errors [formulario]="forma" formControlLabel="username" [minlenght]=3 [maxlenght]=20>
@@ -46,7 +42,7 @@
        
       <button
         type="submit"
-        class="btn btn-primary aldrich shadow-none rounded-0"
+        class="btn btn-outline-success aldrich shadow-none rounded-0"
         style="width: 100%; height: 50px; opacity: 1"
         data-dismiss="modal"
         [disabled]="
