--- a/src/app/components/modals/base-modal/base-modal.component.html
+++ b/src/app/components/modals/base-modal/base-modal.component.html
@@ -9,7 +9,8 @@
 
         <app-form
         *ngIf="target === 'buy'"
-        (cerrarModal)="modal.close()"          
+        (cerrarModal)="modal.close()"  
+        [data]="data"        
       ></app-form>
 
         <app-sign-in
