--- a/src/app/components/modals/form/form.component.html
+++ b/src/app/components/modals/form/form.component.html
@@ -11,32 +11,38 @@
     ></app-button-close>
   </div>
   <div class="form-body">
+    <form [formGroup]="forma">
     <div class="row">
       <div class="form-holder">
         <div class="form-content">
             <div class="card">
                 <img
                   class="card-img-top"
-                  src="https://images.unsplash.com/photo-1593642632823-8f785ba67e45?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80"
+                  height="80"
+                  width="80"
+                  style="object-fit: cover;"
+                  [src]="data.img"
                   alt="Card image cap"
                 />
                 <div class="card-body">
                     <div>
-                        <h5 class="card-title">Portatil</h5>
-                        <h5 class="card-title text-right">$5</h5>
+                        <h5 class="card-title">{{data.name}}</h5>
+                        <h5 class="card-title text-left">${{data.price}} USD</h5>
                     </div>
               
                   <p class="card-text">
-                    This is a wider card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.
+                    {{data.description}}
                   </p>
                   <p class="card-text">
                     <small class="text-muted"></small>
                   </p>
+                  <p class="card-text">
+                    <label class="col-form-label">Escoja la cantidad</label>
+                    <input type="number" formControlName="amount" class="form-control" #amount>
+                  </p>
                   <div class="form-button mt-3 clearfix mb-2">
                     <button
-                      id="submit"
-                      type="submit"
+                    (click)="handleForm()"
                       class="btn btn-outline-primary float-left"
                     >
                       Pagar con placetopay
@@ -49,141 +55,10 @@
                   </div>
                 </div>
               </div>
-          <!-- <div class="form-items">
-            <form
-              class="requires-validation"
-              (ngSubmit)="handleForm($event)"
-              [formGroup]="forma"
-            >
-              <div class="col-md-12 mb-3 mt-2">
-                <input
-                  class="form-control"
-                  type="text"
-                  formControlName="name"
-                  placeholder="Full Name"
-                  required
-                />
-                <div class="valid-feedback">Username field is valid!</div>
-                <div class="invalid-feedback">
-                  Username field cannot be blank!
-                </div>
-              </div>
-
-              <div class="col-md-12">
-                <input
-                  class="form-control"
-                  type="email"
-                  formControlName="email"
-                  placeholder="E-mail Address"
-                  required
-                />
-                <div class="valid-feedback">Email field is valid!</div>
-                <div class="invalid-feedback">Email field cannot be blank!</div>
-              </div>
-
-              <div class="col-md-12 mb-3">
-                <select class="form-select mt-3" required>
-                  <option selected disabled value="">Position</option>
-                  <option value="jweb">Junior Web Developer</option>
-                  <option value="sweb">Senior Web Developer</option>
-                  <option value="pmanager">Project Manager</option>
-                </select>
-                <div class="valid-feedback">You selected a position!</div>
-                <div class="invalid-feedback">Please select a position!</div>
-              </div>
-
-              <div class="col-md-12">
-                <input
-                  class="form-control"
-                  type="text"
-                  formControlName="position"
-                  placeholder="Password"
-                  required
-                />
-                <div class="valid-feedback">Password field is valid!</div>
-                <div class="invalid-feedback">
-                  Password field cannot be blank!
-                </div>
-              </div>
-
-              <div class="col-md-12 mt-3">
-                <label class="mb-3 mr-1" for="gender">Genero: </label>
-
-                <input
-                  type="radio"
-                  class="btn-check"
-                  name="gender"
-                  id="male"
-                  autocomplete="off"
-                  required
-                />
-                <label class="btn btn-sm btn-outline-secondary" for="male"
-                  >Masculino</label
-                >
-
-                <input
-                  type="radio"
-                  class="btn-check"
-                  name="gender"
-                  id="female"
-                  autocomplete="off"
-                  required
-                />
-                <label class="btn btn-sm btn-outline-secondary" for="female"
-                  >Femenino</label
-                >
-
-                <input
-                  type="radio"
-                  class="btn-check"
-                  name="gender"
-                  id="secret"
-                  autocomplete="off"
-                  required
-                />
-                <label class="btn btn-sm btn-outline-secondary" for="secret"
-                  >Secret</label
-                >
-                <div class="valid-feedback mv-up">You selected a gender!</div>
-                <div class="invalid-feedback mv-up">
-                  Please select a gender!
-                </div>
-              </div>
-
-              <div class="form-check">
-                <input
-                  class="form-check-input"
-                  type="checkbox"
-                  value=""
-                  id="invalidCheck"
-                  required
-                />
-                <label class="form-check-label"
-                  >Confirmo que todos los datos son correctos</label
-                >
-                <div class="invalid-feedback">
-                  ¡Confirme que los datos ingresados ​​sean correctos!
-                </div>
-              </div>
-
-              <div class="form-button mt-3 clearfix mb-2">
-                <button
-                  id="submit"
-                  type="submit"
-                  class="btn btn-outline-primary float-left"
-                >
-                  Pagar con placetopay
-                </button>
-                <a
-                  (click)="cerrar(true)"
-                  class="btn btn-outline-success float-right"
-                  >Home</a
-                >
-              </div>
-            </form>
-          </div> -->
+          
         </div>
       </div>
     </div>
+  </form>
   </div>
 </div>
