--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -33,15 +33,10 @@
             <h3 class="mb-5"><em>Para ingeniero de integraciones</em></h3>
             <a class="btn btn-primary btn-xl" href="#product">Ir a los productos</a>
         </div>
-    </header> 
-    
-    <section class="container mt-4">
-        <h2 class="text-center mb-3" id="product">Nuestros Productos!</h2>    
-        <div class="row">
-            <div class="col">   
-            <app-card-products></app-card-products>
-            </div>
-        </div>
+    </header>     
+    <section class="container">
+        <h2 class="text-center mb-3" id="product">Nuestros Productos!</h2> 
+        <app-card-products></app-card-products>        
     </section>
     <app-footer></app-footer>
     <!-- Scroll to Top Button-->
