--- a/src/app/components/modals/form/form.component.html
+++ b/src/app/components/modals/form/form.component.html
@@ -31,21 +31,23 @@
                     </div>
               
                   <p class="card-text">
-                    {{data.description}}
+                    {{data.description | slice:0:30}}
                   </p>
                   <p class="card-text">
                     <small class="text-muted"></small>
                   </p>
                   <p class="card-text">
                     <label class="col-form-label">Escoja la cantidad</label>
-                    <input type="number" formControlName="amount" class="form-control" #amount>
+                    <input  min="1" type="number" value="1" formControlName="amount" class="form-control" #amount>
+                    <app-validation-errors [formulario]="forma" formControlLabel="amount">
+                    </app-validation-errors>
                   </p>
                   <div class="form-button mt-3 clearfix mb-2">
                     <button
                     (click)="handleForm()"
                       class="btn btn-outline-primary float-left"
                     >
-                      Pagar con placetopay
+                    <img src="https://static.placetopay.com/placetopay-logo.svg" class="attachment-0x0 size-0x0" width="100%" height="30" loading="lazy">
                     </button>
                     <a
                       (click)="cerrar(true)"
