--- a/src/app/components/modals/form/form.component.html
+++ b/src/app/components/modals/form/form.component.html
@@ -65,6 +65,19 @@
                       loading="lazy"
                     />
                   </button>
+
+                 <!--  <button
+                  (click)="handleFormPse()"
+                  class="btn btn-outline-primary float-left"
+                >
+                  <img
+                    src="https://static.placetopay.com/placetopay-logo.svg"
+                    class="attachment-0x0 size-0x0"
+                    width="100%"
+                    height="30"
+                    loading="lazy"
+                  />
+                </button> -->
                   <a
                     (click)="cerrar(true)"
                     class="btn btn-outline-success float-right"
