--- a/src/app/components/card-products/card-products.component.html
+++ b/src/app/components/card-products/card-products.component.html
@@ -18,7 +18,7 @@
         <ng-template *ngIf="isAuth; then buy; else login"></ng-template>
 
         <ng-template #buy>
-          <a class="btn btn-outline-primary" (click)="onBuy.open(product)">Comprar</a>
+          <a class="btn btn-outline-primary" (click)="onBuy.open(product,user)">Comprar</a>
         </ng-template>
 
         <ng-template #login>
