--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -19,6 +19,7 @@
             <th scope="col">Usuario</th>
             <th scope="col">Nombre Producto</th>
             <th scope="col">Description Producto</th>
+            <th scope="col">Valor de la transaccion</th>
             <th scope="col">Estado</th>
             <ng-template *ngIf="url; then data"></ng-template>
             <ng-template #data>
@@ -43,6 +44,7 @@
             <td>{{ customer?.first_name }} {{ customer?.last_name }}</td>
             <td>{{ order?.name }}</td>
             <td>{{ order?.description | slice: 0:10 }}</td>
+            <td>{{ order?.price }}</td>
             <td>
               <p class="badge badge-pill badge-primary" [ngClass]="{'badge badge-pill badge-success': status === 'APPROVED', 
                   'badge badge-pill badge-danger': status === 'REJECTED', 'badge badge-pill badge-primary': status === 'CREATED' }">{{ status }}</p>
