--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -40,9 +40,9 @@
         <tbody>
           <tr *ngFor="let order of orders" [ngStyle]="{ height: '100px' }">
             <th scope="row">{{ order.id }}</th>
-            <td>{{ customer?.email }}</td>
-            <td>{{ customer?.first_name }} {{ customer?.last_name }}</td>
-            <td>{{ order?.name }}</td>
+            <td>{{ order?.email }}</td>
+            <td>{{ order?.name }} </td>
+            <td>{{ order?.product }}</td>
             <td>{{ order?.description | slice: 0:10 }}</td>
             <td>{{ order?.price }}</td>
             <td>
